# lab-test-analysis-with-llm-rag

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
assets/app_icon/: logo.icns
lab_test_analysis_with_llm_rag/: config.py  main.py
lab_test_analysis_with_llm_rag/app/: config.py  main.py
lab_test_analysis_with_llm_rag/app/core/: chat_store.py  document_parser.py  knowledge_base.py  llama_setup.py  llm_engine.py  logger.py  model_hub.py  model_meta.py  organizer.py
lab_test_analysis_with_llm_rag/app/ui/: documents_hub_dialog.py  main_window.py  model_hub_dialog.py  model_select_dialog.py  profile_dialog.py  settings_dialog.py  styles.py
lab_test_analysis_with_llm_rag/config/: __init__.py  models.py  paths.py  settings.py
lab_test_analysis_with_llm_rag/core/: biomarkers.py  chat_store.py  device_compat.py  document_parser.py  file_io.py  health_report.py  http_client.py  knowledge_base.py  llama_setup.py  llm_engine.py  llm_server.py  logger.py  macos_compat.py  messages.py  model_hub.py  model_meta.py  prompts.py  qthread_utils.py  rag_context.py  security.py  user_data.py
lab_test_analysis_with_llm_rag/core/biomarkers/: __init__.py  aggregate.py  extract.py  store.py  units.py
lab_test_analysis_with_llm_rag/ui/: components.py  documents_hub_dialog.py  main_window.py  model_file_helpers.py  model_hub_dialog.py  model_hub_widget.py  model_hub_workers.py  model_select_dialog.py  profile_dialog.py  screens.py  sections.py  settings_dialog.py  styles.py
packaging/: build_macos.sh  lab_analyzer.spec
src/app/: config.py  main.py
(+40 files in other folders)
