[project]
name = "lab-test-analyzer"
version = "0.1.0"
description = "Desktop application for medical lab test analysis using LLM and RAG"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "httpx>=0.27",
    "docling>=2.14",
    "markdown>=3.6",
]

[project.scripts]
lab-analyzer = "app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
