[project]
name = "lab-test-analyzer"
version = "0.1.0"
description = "Desktop application for medical lab test analysis using LLM and RAG"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "httpx>=0.27",
    "markdown>=3.6",
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    "gguf>=0.10",
    "psutil>=5.9",
]

[project.scripts]
lab-analyzer = "app.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lab_test_analysis_with_llm_rag"]

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "ruff>=0.14",
]

[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

[tool.ruff.lint]
select = [
    "I",      # isort
    "E", "W", # pycodestyle
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "A",      # flake8-builtins
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
pycodestyle = { max-doc-length = 105 }
